ScadaWeb: fix notif z-index

--- a/ScadaWeb/ScadaWeb/ScadaWeb/wwwroot/css/_variables.scss
+++ b/ScadaWeb/ScadaWeb/ScadaWeb/wwwroot/css/_variables.scss
@@ -58,4 +58,4 @@ $form-width-large: 800px;
 
 // Z-indexes
 // The values below take into account Bootstrap z-indexes https://getbootstrap.com/docs/5.3/layout/z-index/
-$zindex-notif: 900; // used by the notification panel
+$zindex-notif: 1005; // used by the notification panel
